@@ -1,0 +1,1 @@
+*** DEPRECATION WARNING: Inferring a filename from the argument to --body will be removed in the future.  Prefix filenames with '@' instead.
