@@ -1,0 +1,1 @@
+*** DEPRECATION WARNING: Option --trigger-deprecation will be removed in the future.  Please see documentation for more information.
